--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,8 +6,7 @@
 {{- else }}
 <meta name="robots" content="noindex, nofollow">
 {{- end }}
-
-<script async defer data-domain="aaroncarson.co.uk" src="https://pls.acx.pw/js/plausible.js"></script>
+<!-- <script async defer data-domain="aaroncarson.co.uk" src="https://pls.acx.pw/js/plausible.js"></script> -->
 
 {{- /* Title */}}
 <title>{{ if .IsHome }}{{ else }}{{ if .Title }}{{ .Title }} | {{ end }}{{ end }}{{ .Site.Title }}</title>
